fixed img height on small screen

--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ main {
 @media screen and (max-width: 850px) {
     img {
         object-fit: contain;
+        min-height: 140px;
     }
     .box {
         min-width: 200px;
